<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="file_name">Glide - Image Loading Library by BumpTech</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="download">Download</string>
    <string name="cloud_download_image">Cloud with downward pointed arrow in the center</string>

    <string name="no_selected_item">Please select the file to download</string>
    <string name="ok">OK</string>
    <string name="snooze">Snooze</string>

    <string name="github_notification_channel_id" translatable="false">github_notification_channel</string>
    <string name="github_notification_channel_name" translatable="true">Repo</string>
    <string name="action_notification_download">Check the status</string>

    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="load_app_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>

    <string name="retrofit_message">Retrofit repository has been selected. Click Download to start.</string>
    <string name="load_app_message">Load App repository has been selected. Click Download to start.</string>
    <string name="glide_message">Glide repository has been selected. Click Download to start.</string>
</resources>
