<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textview_load_app_download_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/custom_box"
        app:layout_constraintBottom_toTopOf="@+id/radiogroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="395dp"
        android:layout_height="216dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/loadingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/glide_text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_loadApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/load_app_text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/retrofit_text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/loadingButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <ImageView
        android:id="@+id/imageview_cloud_download"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cloud_download_image"
        app:layout_constraintBottom_toBottomOf="@+id/textview_load_app_download_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textview_load_app_download_image"
        app:layout_constraintTop_toTopOf="@+id/textview_load_app_download_image"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_cloud_download"
        app:tint="@color/purple" />

</androidx.constraintlayout.widget.ConstraintLayout>